// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Recent Change Chip Booked 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="recentChangeChipContainer"
  >
    <div
      className="recentChangeChip greenChip"
    >
      חדש
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Recent Change Chip Cancelled 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="recentChangeChipContainer"
  >
    <div
      className="recentChangeChip redChip"
    >
      בוטל לאחרונה
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Recent Change Chip Completed 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="recentChangeChipContainer"
  >
    <div
      className="recentChangeChip greenChip"
    >
      הושלם
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Recent Change Chip No Show 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="recentChangeChipContainer"
  >
    <div
      className="recentChangeChip redChip"
    >
      לא הגיע
    </div>
  </div>
</div>
`;
